--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,33 @@
-group 'kiefer.kata.bowling'
+group 'peter-dowling.kata.bowling'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+buildscript {
+    repositories {
+        maven { url "https://dl.bintray.com/d10xa/maven" }
+    }
+    dependencies {
+        classpath "ru.d10xa:gradle-allure-plugin:0.5.5"
+        classpath "ru.d10xa:allure-junit-aspectj-adaptor:0.1.1"
+    }
+}
 
+apply plugin: "ru.d10xa.allure"
+
+allure {
+    aspectjweaver = true
+    junit = true
+
+    allureResultsDir = "$buildDir/allure-results"
+    allureReportDir = "$buildDir/allure-report"
+}
 repositories {
     mavenCentral()
 }
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
+
+tasks.withType(Test)*.finalizedBy allureReport
